--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "timecoded-links",
     "playlist",
     "vanillajs",
-    "vanilla",
+    "vanilla"
   ],
   "author": "Xavier \"dascritch\" Mouton-Dubosc",
   "license": "GPL-3.0-or-later",
