--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "homepage": "https://github.com/dascritch/cpu-audio#readme",
   "dependencies": {
+    "css-minify": "^1.1.0",
     "google-closure-compiler": "^20210202.0.0",
     "webpack": "^5.24.2"
   },
