--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
   },
   "homepage": "https://github.com/dascritch/cpu-audio#readme",
   "dependencies": {
-    "css-minify": "^1.1.0",
     "google-closure-compiler": "^20210202.0.0",
+    "html-minifier": "^4.0.0",
     "webpack": "^5.24.2"
   },
   "devDependencies": {
