--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "homepage": "https://github.com/dascritch/cpu-audio#readme",
   "dependencies": {
+    "clean-css-cli": "^5.2.0",
     "google-closure-compiler": "^20210202.0.0",
     "html-minifier": "^4.0.0",
     "webpack": "^5.24.2"
