--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "clean-css-cli": "^5.2.0",
     "google-closure-compiler": "^20210202.0.0",
     "html-minifier": "^4.0.0",
+    "terser-webpack-plugin": "^5.1.1",
     "webpack": "^5.24.2"
   },
   "devDependencies": {
