--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "homepage": "https://github.com/dascritch/cpu-audio#readme",
   "dependencies": {
     "clean-css-cli": "^5.2.0",
+    "eslint-webpack-plugin": "^2.5.2",
     "google-closure-compiler": "^20210202.0.0",
     "html-minifier": "^4.0.0",
     "terser-webpack-plugin": "^5.1.1",
@@ -42,5 +43,76 @@
   },
   "devDependencies": {
     "webpack-cli": "^4.5.0"
+  },
+  "eslintConfig": {
+    "parserOptions": {
+        "ecmaVersion": 12,
+        "sourceType": "module",
+        "ecmaFeatures": {}
+    },
+    "rules": {
+        "constructor-super": 2,
+        "for-direction": 2,
+        "getter-return": 2,
+        "no-async-promise-executor": 2,
+        "no-case-declarations": 2,
+        "no-class-assign": 2,
+        "no-compare-neg-zero": 2,
+        "no-cond-assign": 2,
+        "no-const-assign": 2,
+        "no-constant-condition": 2,
+        "no-control-regex": 2,
+        "no-debugger": 2,
+        "no-delete-var": 2,
+        "no-dupe-args": 2,
+        "no-dupe-class-members": 2,
+        "no-dupe-else-if": 2,
+        "no-dupe-keys": 2,
+        "no-duplicate-case": 2,
+        "no-empty": 2,
+        "no-empty-character-class": 2,
+        "no-empty-pattern": 2,
+        "no-ex-assign": 2,
+        "no-extra-boolean-cast": 2,
+        "no-extra-semi": 1,
+        "no-fallthrough": 2,
+        "no-func-assign": 2,
+        "no-global-assign": 2,
+        "no-import-assign": 2,
+        "no-inner-declarations": 2,
+        "no-invalid-regexp": 2,
+        "no-irregular-whitespace": 2,
+        "no-misleading-character-class": 2,
+        "no-new-symbol": 2,
+        "no-obj-calls": 2,
+        "no-redeclare": 2,
+        "no-regex-spaces": 2,
+        "no-self-assign": 2,
+        "no-setter-return": 2,
+        "no-shadow-restricted-names": 2,
+        "no-sparse-arrays": 2,
+        "no-this-before-super": 2,
+        "no-undef": 2,
+        "no-unexpected-multiline": 2,
+        "no-unreachable": 2,
+        "no-unsafe-finally": 2,
+        "no-unsafe-negation": 2,
+        "no-unused-labels": 2,
+        "no-unused-vars": 2,
+        "no-useless-catch": 2,
+        "no-useless-escape": 2,
+        "no-with": 2,
+        "require-yield": 2,
+        "strict": 2,
+        "use-isnan": 2,
+        "valid-typeof": 2,
+        "comma-style": 2,
+        "block-scoped-var": 2,
+        "eqeqeq": 2,
+        "no-else-return": 2    },
+    "env": {
+        "browser": true,
+        "es2021": true
+    }
   }
 }
