Resolve differences between Chrome desktop and Chrome puppeteered
Do more tests on real mobile Chrome on real websites #113

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "test": "tests"
   },
   "scripts": {
-    "build": "./make.sh",
-    "test": "echo \"Tests in tests/ needs browser and help\" && exit 0"
+    "build": "./make.sh --clean",
+    "test": "./make.sh --test"
   },
   "repository": {
     "type": "git",
