Migrate global.css and scoped.css in themes/default/
Create graphic themes #56

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "tests"
   },
   "scripts": {
-    "build": "./make.sh --clean",
+    "build": "./make.sh --clean --index",
     "test": "./make.sh --test"
   },
   "repository": {
