I need to more isolate private dev parts

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
 node_modules/*
 package-lock.json
 src/themes/_*
-build/cpu-audio.EXPERIMENTAL.*
-build/_*
+build/cpu-audio._*
 tests-assets/*
 tmp/
-__TEST.html
