--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cpu-audio",
-  "version": "6.6.99pre",
+  "version": "7.0",
   "description": "An audio WebComponent to provide an user-interface, timecoded links and some other features to an <audio> tag",
   "main": "index.js",
   "directories": {
